--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Fokir - Personal Portfolio Bootstrap Template</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/medi1a.css" />
+    <link rel="stylesheet" href="css/media.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
